--- a/wp-content/themes/twentytwentyone-child/assets/css/style.css
+++ b/wp-content/themes/twentytwentyone-child/assets/css/style.css
@@ -17,18 +17,22 @@ body{
 }
 
 .header{
-    width: auto;
+    position: fixed;
+    width: 100%;
     height: 98px;
-	padding-left: 40px;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: #fff;
+    z-index: 10;
+    top: 0;
 }
 
 .logo img{
 	height: 46px;
-	width: 129px;
-	display: flex;
+    width: 129px;
+    padding-left: 40px;
+    display: flex;
     justify-content: center;
 }
 
@@ -91,35 +95,30 @@ active {
 }
 
 .introduction div{
+    width: 100%;
     display: flex;
-    flex-direction: column;
+	flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .introduction1{
-	width: auto;
-	height: 633px;
-	background-image: url(../images/main_img.jpg);
-    background-size: cover;
-	background-attachment: fixed;
+	padding-top: 98px;
+    width: 100%;
+    height: 48vw;
+    background-image: url(../images/main_img.jpg);
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
-    padding: 0;
+    background-position: top 98px center;
     position: relative;
 }
 
-.wire1{
-	position: absolute;
-    top: -250px;
-    left: -250px;
-}
-
-.wire2{
-	position: absolute;
-    transform: rotate(-25deg);
-    top: -250px;
-    left: 550px;
+.wire img{
+    width: 100%;
+    position: absolute;
+    top: -200px;
+    left: 0;
+    right: 0;
 }
 
 .introduction2{
@@ -130,6 +129,7 @@ active {
 	background-image: url(../images/main_mask_img.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+	background-attachment: fixed;
     background-position: center;
     position: relative;
 }
@@ -178,6 +178,7 @@ h1{
 h2{
 	font-weight: bold;
 	font-size: 28px;
+	letter-spacing: 8px;
 	color: #fff;
 }
 
@@ -283,7 +284,7 @@ hr{
 }
 
 .news-category{
-	text-decoration: none;
+	cursor: pointer;
 }
 
 .news-category-group .category{
@@ -314,33 +315,32 @@ hr{
 }
 
 .news-popup-overlay{
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background: rgba(0, 0, 0, 0.7);
-	transition: opacity 300ms;
-	visibility: hidden;
-	opacity: 0;
-	padding: 4% 12.5% 4% 12.5%;
+	display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 120px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    transition: opacity 500ms;
+	transition: all 0.5s ease-in-out;
 }
 
 .news-popup{
+	margin: auto auto 136px auto;
     padding: 40px 12.5% 40px 12.5%;
-    background: #fff;
-    border-radius: 5px;
     width: 75%;
-    height: 90%;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background: #fff;
     overflow: auto;
     position: relative;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
-
-.news-popup-overlay:target {
-	visibility: visible;
-	opacity: 1;
-  }
 
 .popup-close{
 	display: flex;
@@ -445,7 +445,7 @@ div.product-intro{
 	color: #333;
 }
 
-.product-intro .header{
+.product-header{
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
