--- a/wp-content/themes/twentytwentyone-child/assets/css/style.css
+++ b/wp-content/themes/twentytwentyone-child/assets/css/style.css
@@ -25,7 +25,8 @@ body{
     justify-content: space-around;
     background: #fff;
     z-index: 10;
-    top: 0;
+    top: -98px;
+	transition: top 0.3s;
 }
 
 .logo img{
@@ -94,6 +95,12 @@ active {
     color: #333333;
 }
 
+.header-empty{
+	width: 100%;
+	height: 98px;
+	z-index: 100;
+}
+
 .introduction div{
     width: 100%;
     display: flex;
@@ -103,20 +110,22 @@ active {
 }
 
 .introduction1{
-	padding-top: 98px;
     width: 100%;
-    height: 48vw;
+    height: 60.1vw;
     background-image: url(../images/main_img.jpg);
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: top 98px center;
     position: relative;
 }
 
-.wire img{
-    width: 100%;
+.wire{
+    background-image: url(../images/wire.png);
+    background-size: contain;
+    background-repeat: no-repeat;
     position: absolute;
-    top: -200px;
+    width: 100%;
+    height: 100%;
+    top: -30%;
     left: 0;
     right: 0;
 }
@@ -124,9 +133,10 @@ active {
 .introduction2{
 	width: 100%;
 	height: auto;
+	margin-top: -30px;
 	padding-top: 140px;
 	padding-bottom: 140px;
-	background-image: url(../images/main_mask_img.jpg);
+	background-image: url(../images/value_bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -177,8 +187,10 @@ h1{
 
 h2{
 	font-weight: bold;
+	text-align: center;
 	font-size: 28px;
 	letter-spacing: 8px;
+	line-height: 33px;
 	color: #fff;
 }
 
@@ -188,6 +200,7 @@ h3{
 	color: #333;
 	margin: 0;
 	line-height: 42px;
+	letter-spacing: 3px;
 }
 
 h4{
@@ -239,7 +252,7 @@ hr{
 }
 
 .section-item{
-	padding: 0 23px 0 23px;
+	padding: 0 23px 0 0;
 }
 
 .news-article{
@@ -281,16 +294,20 @@ hr{
 .news-category-group{
 	display: flex;
 	flex-direction: row;
+    flex-wrap: wrap;
+	padding: 9px 0 4px 0;
 }
 
 .news-category{
 	cursor: pointer;
+    flex: auto;
 }
 
 .news-category-group .category{
-	width: 66px;
+	width: auto;
 	height: 24px;
-	margin: 9px 15px 9px 0;
+	padding: 0 10px 0 10px;
+    margin: 0 15px 9px 0;
 	font-family: 'Noto Sans CJK JP';
 	font-size: 10px;
 	font-weight: 500;
@@ -299,7 +316,7 @@ hr{
 	border-color: #26386B;
 	border-style:solid;
 	border-width: 1px;
-	border-radius: 24px;
+	border-radius: 15px;
 }
 
 .indetail a{
@@ -327,7 +344,6 @@ hr{
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
     transition: opacity 500ms;
-	transition: all 0.5s ease-in-out;
 }
 
 .news-popup{
@@ -434,7 +450,6 @@ hr{
 div.product-intro{
 	background: #F5F5F5;
     padding-top: 80px;
-    padding-bottom: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -475,6 +490,7 @@ div.product-intro{
 	text-align: left;
 	padding-top: 5px;
 	padding-bottom: 10px;
+	text-align: justify;
 }
 
 .product-content .number{
@@ -535,6 +551,7 @@ div.product-intro{
 .window-title h3{
 	color: #fff;
 	line-height: 24px;
+	
 }
 
 .window-content{
@@ -579,6 +596,7 @@ div.product-intro{
 }
 
 .tabs-button{
+	font-family: 'Noto Sans CJK JP';
 	font-size: 16px;
 	font-weight: Bold;
 	width: 25%;
@@ -677,11 +695,12 @@ div.product-intro{
 }
 
 .delivery-items{
-	width: 72%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
+    width: 72%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .delivery-items .item{
@@ -870,6 +889,7 @@ div.product-intro{
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
+	padding-bottom: 5px
 }
 
 .representative div{
@@ -942,12 +962,9 @@ div.product-intro{
     align-items: center;
 }
 
-.subtext1{
-	display: contents;
-}
-
-.subtext2{
-	padding-left: 52px;
+.subtext{
+	display: flex;
+	flex-direction: column;
 }
 
 .inquires-record{
@@ -970,20 +987,27 @@ div.product-intro{
 	width: 36.5%;
 }
 
-.necessary::before{
-	content: '必須';
-	color:#fff;
-	font-size: 14px;
-	background: #CE0000;
-	border-radius: 4px;
-	padding: 2px 8px 2px 8px;
-	margin: 0 8px 0 0;
+.necessary{
+	display: flex;
+	flex-direction: row;
+}
+
+.necessary-box{
+    width: 46px;
+    height: 24px;
+    color: #fff;
+    font-size: 14px;
+    background: #CE0000;
+    border-radius: 4px;
+    margin: 0 8px 0 0;
+    text-align: center;
 }
 
 .inquires-value{
 	width: 100%;
     flex: 1;
 	box-sizing: border-box;
+	padding: 3px;
 }
 
 .inquires-content .first{
@@ -1090,14 +1114,60 @@ input.contact-checkbox{
 	padding: 0;
 }
 
+.btn-hamburgo{
+	display: none;
+}
+
+.btn-close{
+	display: none;
+}
+
+.btn-hamburgo:active{
+	background-color: #a6defc;
+	color: white;
+}
+
+.btn-hamburgo i{
+    color: #98A6B5;
+    font-size: 24px;
+}
+
+.btn-close i{
+    color: #98A6B5;
+    font-size: 24px;	
+}
+
+.btn-close:active{
+	background-color: #a6defc;
+	color: white;
+}
+
 .social-icons{
 	height: fit-content;
 	margin: 4px 0 14px 0;
+	display: flex;
+    flex-direction: row;
+}
+
+.social-icons div{
+    width: 24px;
+    height: 24px;
+    display: flex;
+    background-color: #161616;
+    border-radius: 13px;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-icons div i{
+    font-size: 16px;
+    color: white;
 }
 
 .privacy a{
 	font-size: 12px;
 	color: #333;
+	letter-spacing: 1px;
 }
 
 .twitter{
@@ -1252,4 +1322,379 @@ input.contact-checkbox{
 .contactus-verify-overlay:target {
 	visibility: visible;
 	opacity: 1;
+}
+
+
+@media all and (max-width: 650px) {
+  .introduction1 {
+	height: 170.67vw;
+	background-image: url(../images/main_img_sp.jpg);
+  }
+
+  h2{
+	width: 70%;
+	font-size: 22px;
+	letter-spacing: 4px;
+  }
+
+  .introduction2 .section-content{
+	width: 89.3%;
+  }
+
+  .wire{
+	background-image: url(../images/wire_sp.png);
+	top: -10%;
+  }
+
+  h3{
+	line-height: 32px;
+	letter-spacing: 2px;
+  }
+
+  .news .section-content{
+	width: 100%;
+    flex-direction: column;
+  }
+
+  .news-category-group .category{
+	margin: 0 5px 9px 0;
+  }
+
+  .news-category .section-item{
+	padding: 0 23px 0 23px;
+  }
+  
+  .product-header{
+	width: 80%;
+  }
+
+  .product-content{
+	width: 100%;
+	padding: 0 5.3% 40px 5.3%;
+  }
+
+  .usecase-content{
+	width: 89.3%;
+	line-height: 32px;
+  }
+
+  .tabs{
+	width: 89.3%;;
+  }
+
+  .tabs-button{
+	font-size: 14px;
+	height: 43px;
+	border-radius: 6px 6px 0 0;
+  }
+
+  .tab1{
+	width: 193px;
+  }
+
+  .tab2{
+	width: 71px;
+  }
+
+  .tab3{
+	width: 71px;
+  }
+
+  .tab2 span{
+	display: none;
+  }
+
+  .tab3 span{
+	display: none;
+  }
+
+  .tab-content-fade{
+	width: 89.3%;
+	line-height: 28px;
+  }
+  .tab-content-fade div{
+	text-align: justify;
+  }
+
+  .delivery-rec .description{
+	width: 89.3%;
+  }
+
+  .delivery-items{
+	width: 89.3%;
+    justify-content: space-between;
+  }
+
+  .delivery-items .item{
+	flex-direction: column;
+	width: 48.96%;
+  }
+
+  .delivery-item-logo{
+	width: 100%;
+	height: 87px;
+  }
+
+  .delivery-item-content{
+	width: fit-content;
+	padding: 0;
+  }
+
+  .del-item-title{
+	width: 100%;
+	margin-top: 10px;
+  }
+
+  .del-item-title-text{
+	color: #333;
+  }
+
+  .del-item-content{
+	width: 100%;
+  }
+
+  h5{
+	text-align: justify;
+  }
+
+  .tech-info .description{
+	width: 89.3%;
+	text-align: justify;
+  }
+
+  .profile-content{
+	width: 89.3%;
+  }
+
+  .profile-classify{
+	width: 28%;
+  }
+
+  .profile-content .last{
+	flex-direction: column;
+  }
+
+  .profile-content .last .profile-classify{
+	margin-bottom: 12px;
+  }
+
+  .profile-value .history .title{
+	width: 18.2%;
+  }
+
+  .profile-value .history .content{
+	text-align: justify;
+  }
+
+  .profile-value .last{
+	flex-direction: row;
+  }
+
+  .inquires{
+	    padding: 80px 5.3% 80px 5.3%;
+  }
+
+  .inquires .description{
+	margin: 0;
+	text-align: justify;
+  }
+
+  .inquires-record{
+	flex-direction: column;
+  }
+
+  .necessary{
+	flex-direction: column;
+  }
+
+  .inquires-classify{
+	width: 100%;
+  }
+
+  .subtext{
+	flex-direction: row;
+  }
+  
+  .classify-text{
+	margin: 5px 0 15px 0;
+  }
+
+  .footer{
+	width: 89.3%;
+  }
+
+  .footer-navbar .nav ul{
+	display: flex;
+    flex-direction: column;
+  }
+
+  .footer-navbar .nav a{
+	text-align: left;
+	padding: 8px 0;
+  }
+
+  .footer-navbar .nav a.first{
+	margin:0;		
+  }
+
+  .footer-navbar{
+	display: flex;
+    flex-direction: column;
+	align-items: flex-start; 
+  }
+
+  .footer-navbar .language-change{
+	width: 100%;
+	text-align: center;
+	padding: 20px 0;
+  }
+
+  .social-icons{
+	width: 100%;
+	height: fit-content;
+	margin: 0 0 24px 0;
+	display: flex;
+    flex-direction: row;
+	justify-content: center;
+}
+
+.social-icons div{
+    width: 47px;
+    height: 47px;
+	border-radius: 23px;
+}
+
+.social-icons div i{
+    font-size: 30px;
+ }
+
+ .privacy a{
+	width: 100%;
+	font-size: 16px;
+	letter-spacing: 4px;
+	text-align: center;
+	display: flex;
+    justify-content: center;
+ }
+
+ .copyright{
+	font-size: 16px;
+	text-align: center;
+ }
+
+ body{
+	letter-spacing: 3px;
+ }
+
+ .header{
+	height: 70px;
+	position: fixed;
+	top: 0;
+ }
+
+ .logo img{
+	padding-left: 20px;
+	width: 100px;
+	height: 36px
+ }
+
+ .header .nav{
+	display: none;
+ }
+
+ .language-change{
+	display: none;
+ }
+
+ .navbar-logo{
+	position: absolute;
+    left: 0;
+ }
+
+ .header .btn-hamburgo{
+	display: flex;
+    width: 35px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    border-radius: 2px;
+    right: 20px;
+ }
+
+ .responsive .btn-close{
+	display: flex;
+    width: 35px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+	border-radius: 2px;
+ }
+
+ .responsive .btn-hamburgo{
+	display: none;
+ }
+
+ .introduction{
+	margin: 70px 0;
+ }
+
+ .responsive{
+    width: 100%;
+    height: 100%;
+    transition: top 0.3s;
+ }
+
+ .responsive .navbar-logo{
+	position: absolute;
+	top: 17px;
+	left: 0;
+ }
+
+ .responsive .btn-close{
+	position: absolute;
+    top: 17px;
+	right: 20px;
+ }
+
+ .responsive .nav{
+	position: absolute;
+	width: 89.3%;
+    height: 100%;
+    display: flex;
+    top: 0;
+    align-items: center;
+ }
+
+ .responsive .nav ul{
+	width: 100%;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ .responsive .nav ul li{
+	width: 100%;
+	display: flex;
+    justify-content: center;
+ }
+
+ .responsive .nav ul li a{
+	font-weight: bold;
+	width: 100%;
+ }
+
+ .responsive .nav ul li .first{
+	margin: 0;
+ }
+
+ .responsive .language-change{
+    display: inline;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 480px;
+ }
+
 }
