--- a/wp-content/themes/twentytwentyone-child/assets/css/style.css
+++ b/wp-content/themes/twentytwentyone-child/assets/css/style.css
@@ -178,12 +178,14 @@ active {
 }
 
 h1{
-	height: 32px;
-	font-family: 'Lato';
-	font-size: 40px;
-	font-weight: bold;
-	color: #333;
-	margin: 0;
+    text-align: center;
+    height: fit-content;
+    font-family: 'Lato';
+    font-size: 40px;
+    font-weight: bold;
+    color: #333;
+    line-height: 45px;
+    margin: 0;
 }
 
 h2{
@@ -291,9 +293,26 @@ hr{
 }
 
 .indetail{
-	width: 100%;
+    width: 286px;
     display: flex;
-    justify-content: center;
+	cursor: pointer;
+}
+.indetail a img{
+	width: 80px;
+    height: 10px;
+    position: absolute;
+    right: -40px;
+	top: 31px;
+	transition: all 0.15s ease-in-out;
+}
+
+.indetail a:hover img{
+	right: -60px;
+}
+
+.indetail:hover a{
+	background-color: #26386B;
+	color: white;
 }
 
 .news-category-group{
@@ -326,14 +345,15 @@ hr{
 
 .indetail a{
 	text-decoration: none;
-	width: 286px;
-	height: 62px;
-	font-size: 16px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-weight: bold;
-	color: #26386B;	
+    width: 100%;
+    height: 62px;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: #26386B;
+    position: relative;	
 }
 
 .news-popup-overlay{
@@ -938,9 +958,14 @@ div.product-intro{
 	margin: 0;
 }
 
-.map iframe{
-	width: 960px;
+.map{
+	width: 75%;
 	height: 480px;
+}
+
+.map iframe{
+	width: 100%;
+	height: 100%;
 	border: 0;
 }
 
@@ -1055,12 +1080,19 @@ div.product-intro{
 }
 
 .inquires-value .checkbox{
-	width: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    height: 50px;
+    height: 30px;
     justify-content: flex-start;
-	align-items: center;
+    align-items: center;
+    margin-bottom: 13px;
+}
+
+.inquires-value .checkbox input{
+    width: 30px;
+	height: 30px;
+	margin-right: 10px;
 }
 
 input.contact-checkbox{
@@ -1069,6 +1101,18 @@ input.contact-checkbox{
 	border-radius: 4px;
 	display: flex;
 	margin: 0 10px 0 0;
+}
+
+.input-box{
+	border: 1px solid #CDD6DD;
+}
+
+.input-box:hover{
+	border-color: #26386B;
+}
+
+.input-box:focus{
+	outline:solid 1px #333;
 }
 
 .inquires-detail{
@@ -1613,9 +1657,10 @@ input.contact-checkbox{
   }
 
   .footer-navbar .language-change{
-	width: 100%;
-	text-align: center;
-	padding: 20px 0;
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+    display: block;
   }
 
   .social-icons{
@@ -1764,6 +1809,7 @@ input.contact-checkbox{
     text-align: center;
     position: absolute;
     top: 480px;
+	padding: 0;
   }
 
   .news-popup-overlay{
@@ -1777,6 +1823,11 @@ input.contact-checkbox{
 
   .news-page-content{
 	width: 89.3%;
+  }
+
+  .map{
+	width: 100%;
+	height: 70vw;
   }
 
 }
